# ProjectTox-Core

./: CMakeLists.txt
other/: CMakeLists.txt
testing/: CMakeLists.txt
testing/toxic/: CMakeLists.txt  prompt.c
toxcore/: Messenger.c
